--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
 				</a>
 			</div>
 			<div id="navbar-collapse-menu" class="collapse navbar-collapse">
-				<ul class="nav navbar-nav">
+				<ul class="nav navbar-nav navbar-align-right">
 
 					{% for item in site.data.settings.menu %}
 						<!-- If has submenues -->
