--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,10 @@
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
+				<!-- Logo Image -->
+    <a href="/" class="navbar-brand">
+        <img src="/assets/MRAC_logo_FNL.png" alt="Your Logo" style="max-height: 50px; margin-top: -15px;">
+    </a>
 				<button class="navbar-toggle collapsed" type="button"
 					data-toggle="collapse" data-target="#navbar-collapse-menu">
 					<span class="sr-only">Toggle navigation</span> <span
