--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 			<div class="navbar-header">
 				<!-- Logo Image -->
     <a href="/" class="navbar-brand">
-        <img src="/assets/MRAC_logo_FNL.png" alt="Your Logo" style="max-height: 50px; margin-top: -15px;">
+        <img src="/assets/images/MRAC_logo_FNL.png" alt="Your Logo" style="max-height: 50px; margin-top: -15px;">
     </a>
 				<button class="navbar-toggle collapsed" type="button"
 					data-toggle="collapse" data-target="#navbar-collapse-menu">
