--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-  <link rel="shortcut icon" type="image/png" href="/icon.png" />
+ <link rel="shortcut icon" type="image/x-icon" href="/assets/images/MRAC_logo_FNL_fav.ico" />
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@koint">
