--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,13 @@
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<!-- Logo Image -->
-    <a href="/" class="navbar-brand">
-        <img src="/assets/images/MRAC_logo_FNL.png" alt="Your Logo" style="max-height: 50px; margin-top: -15px;">
-    </a>
+    			<a href="/" class="navbar-brand">
+        			<img src="/assets/images/MRAC_logo_FNL.png" alt="Your Logo" style="max-height: 50px; margin-top: -15px;">
+    			</a>
+				<!-- Website Title Next to the Logo -->
+				<div class="site-title-container">
+					<h1 class="site-title">Mine Reclamation and Closure</h1>
+				</div>
 				<button class="navbar-toggle collapsed" type="button"
 					data-toggle="collapse" data-target="#navbar-collapse-menu">
 					<span class="sr-only">Toggle navigation</span> <span
@@ -15,26 +19,24 @@
 			</div>
 			<div id="navbar-collapse-menu" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-align-right">
-
 					{% for item in site.data.settings.menu %}
-						<!-- If has submenues -->
 						{% if item.submenu %}
-						<li class="dropdown">
-							<a class="dropdown-toggle"	data-toggle="dropdown" href="#">
-								{{item.name}}
-								<span class="caret"></span>
-							</a>
-							<ul class="dropdown-menu">
-								{% for subitem in item.submenu %}
-									<li>
-										<a href="{{subitem.link}}">
-											{% if subitem.icon %}
-											<i class="fa fa-inverse fa-{{subitem.icon}} fa-2x"></i>
-											{% endif %}
-											{{subitem.name}}
-										</a>
-									</li>
-								{% endfor %}
+							<li class="dropdown">
+								<a class="dropdown-toggle" data-toggle="dropdown" href="#">
+									{{item.name}}
+									<span class="caret"></span>
+								</a>
+								<ul class="dropdown-menu">
+									{% for subitem in item.submenu %}
+										<li>
+											<a href="{{subitem.link}}">
+												{% if subitem.icon %}
+													<i class="fa fa-inverse fa-{{subitem.icon}} fa-2x"></i>
+												{% endif %}
+												{{subitem.name}}
+											</a>
+										</li>
+									{% endfor %}
 								</ul>
 							</li>
 						{% else %}
@@ -45,16 +47,11 @@
 			</div>
 		</div>
 	</nav>
-		{% if page.noimage %}
-		{% else %}
-		<img
-			alt="{{ page.title }}"
-			src="/assets/images/{{page.id}}/top.jpg" class="img-responsive">
-		{% endif %}
-
+	{% if page.noimage %}
+	{% else %}
+		<img alt="{{ page.title }}" src="/assets/images/{{page.id}}/top.jpg" class="img-responsive">
+	{% endif %}
 	<div class="jumbotron  clearfix">
-
 		<h1 class="text-center">{{ page.title }}</h1>
-
 	</div>
 </div>
