--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -181,3 +181,29 @@ h3:before {
 .navbar-align-right {
     float: right;
 }
+/* Style for the container of the site title */
+.site-title-container {
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 10px; /* Adjust as needed for alignment */
+    margin-top: 15px; /* Adjust as needed for alignment */
+}
+
+/* Style for the site title */
+.site-title {
+    color: #fff; /* White text */
+    font-size: 24px; /* Adjust size as needed */
+    font-weight: normal; /* Optional: adjusts the font weight */
+    margin: 0; /* Remove default margin */
+    padding: 0; /* Remove default padding */
+}
+
+/* Media query for smaller screens */
+@media (max-width: 767px) {
+    .site-title-container {
+        display: block; /* Stack title below logo on smaller screens */
+        margin-top: 5px; /* Adjust as needed for alignment */
+        text-align: center; /* Center the title */
+    }
+}
+
