--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -217,3 +217,35 @@ h3:before {
         float: right; /* Align the toggle button to the right */
     }
 }
+
+/* Add this to your CSS file */
+@keyframes shimmer {
+    0% {
+        background-position: -500px 0;
+    }
+    100% {
+        background-position: 500px 0;
+    }
+}
+
+.logo-container {
+    position: relative;
+    display: inline-block;
+    max-height: 50px; /* Adjust based on your logo size */
+    margin-top: -15px; /* Keep your original style */
+    overflow: hidden;
+}
+
+.logo-container img {
+    height: 100%; /* Adjust if necessary */
+}
+
+.shimmer-effect {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 255, 0) 100%);
+    animation: shimmer 2s infinite;
+}
