--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,10 +3,9 @@
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<!-- Logo Image -->
-    			<a href="/" class="navbar-brand logo-container">
-    				<img src="/assets/images/MRAC_logo_FNL.png" alt="Your Logo" style="max-height: 50px; margin-top: -15px;">
-    	
-			</a>
+    			<a href="/" class="navbar-brand">
+        			<img src="/assets/images/MRAC_logo_FNL.png" alt="Your Logo" style="max-height: 50px; margin-top: -15px;">
+    			</a>
 
 				<!-- Website Title Next to the Logo -->
 				<div class="site-title-container">
