--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,7 +50,7 @@
 	</nav>
 	{% if page.noimage %}
 	{% else %}
-		<img alt="{{ page.title }}" src="/assets/images/{{page.id}}/mrac.jpg" class="img-responsive">
+		<img alt="{{ page.title }}" src="/assets/images/{{page.id}}/mrac.jpg" class="img-responsive full-width-image">
 	{% endif %}
 	<div class="jumbotron  clearfix">
 		<h1 class="text-center">{{ page.title }}</h1>
