--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,15 +2,19 @@
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<!-- Logo Image -->
-    			<a href="/" class="navbar-brand">
-        			<img src="/assets/images/MRAC_logo_FNL.png" alt="Your Logo" style="max-height: 50px; margin-top: -15px;">
-    			</a>
+			<!-- Flex Container for Logo and Title -->
+<div class="logo-title-container">
+    <!-- Logo Image -->
+    <a href="/" class="navbar-brand">
+        <img src="/assets/images/MRAC_logo_FNL.png" alt="Your Logo" style="max-height: 50px; margin-top: -15px;">
+    </a>
 
-				<!-- Website Title Next to the Logo -->
-				<div class="site-title-container">
-					<h1 class="site-title">Mine Reclamation and Closure</h1>
-				</div>
+    <!-- Website Title Next to the Logo -->
+    <div class="site-title-container">
+        <h1 class="site-title">Mine Reclamation and Closure</h1>
+    </div>
+</div>
+
 				<button class="navbar-toggle collapsed" type="button"
 					data-toggle="collapse" data-target="#navbar-collapse-menu">
 					<span class="sr-only">Toggle navigation</span> <span
