--- a/_includes/head.html
+++ b/_includes/head.html
@@ -87,7 +87,10 @@
    <link href="/assets/css/syntax.css" rel="stylesheet">
 
   <script src="/assets/js/jquery.min.js"></script>
-  <script src="/assets/js/bootstrap.min.js"></script>
+<script src="/assets/js/bootstrap.min.js"></script>
+<!-- Link to script for customising page title on mobile-->
+<script src="/assets/js/mobile_title.js"></script>
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-1VJ3JPXXDX"></script>
 <script>
