--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,9 +10,8 @@
     </a>
 
     <!-- Website Title Next to the Logo -->
-    <div class="site-title-container">
-        <h1 class="site-title">Mine Reclamation and Closure</h1>
-    </div>
+    <div id="title-long">Mine Reclamation and Closure</div>
+    <div id="title-short" style="display: none;">MRaC</div>
 </div>
 
 				<button class="navbar-toggle collapsed" type="button"
