Revert "Update header.html"
This reverts commit 1e2aa8e2bda0c736d1befc86bc08015f3a9c8f31.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,8 +10,9 @@
     </a>
 
     <!-- Website Title Next to the Logo -->
-    <div id="title-long">Mine Reclamation and Closure</div>
-    <div id="title-short" style="display: none;">MRaC</div>
+    <div class="site-title-container">
+        <h1 class="site-title">Mine Reclamation and Closure</h1>
+    </div>
 </div>
 
 				<button class="navbar-toggle collapsed" type="button"
