--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,7 +41,7 @@ h3:before {
 	letter-spacing: 0.2em;
 	font-size: 3em;
 	text-align: center;
-	text-transform: uppercase;
+	text-transform: none;
 	letter-spacing: 0.2em;
 }
 
@@ -72,7 +72,7 @@ h3:before {
 .navbar-default {
 	background-color: black;
 	border-color: #12421f;
-	text-transform: uppercase;
+	text-transform: none;
 	font-size: 1.3em;
 }
 
