customised mobile page title to MRaC

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,6 +12,7 @@
     <!-- Website Title Next to the Logo -->
     <div class="site-title-container">
         <h1 class="site-title">Mine Reclamation and Closure</h1>
+		<h1 class="site-title-mobile">MRaC</h1>
     </div>
 </div>
 
